--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -4,9 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MenuActivity"
+    tools:context="com.jihad.login.MenuActivity"
     android:columnCount="1"
     android:background="@drawable/gradient_a">
+    <Button
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_columnWeight="1"
+        android:background="@android:color/transparent"
+        android:drawableRight="@drawable/img_dollar_128"
+        android:textColor="#fff"
+        android:text="Forex"
+        android:id="@+id/tampilForexButton">
+    </Button>
     <Button
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
@@ -22,7 +32,9 @@
         android:layout_columnWeight="1"
         android:textColor="#fff"
         android:drawableLeft="@drawable/student"
-        android:text="Master Mahasiswa"></Button>
+        android:text="Master Mahasiswa"
+        android:id="@+id/tampilMahasiswaButton">
 
+    </Button>
 
 </GridLayout>
