--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,45 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    tools:context="com.jihad.login.ForexMainActivity"
     android:orientation="vertical"
     android:padding="20dp"
     android:background="@drawable/gradient_a">
 
     <ImageView
-        android:layout_width="150dp"
+        android:layout_width="wrap_content"
+        android:layout_height="150dp"
         android:src="@drawable/logostmik"
-        android:layout_gravity="center"
-        android:layout_marginTop="10dp"
         android:layout_marginBottom="30dp"
-        android:layout_height="150dp">
+        android:layout_marginTop="10dp"
+        android:gravity="center">
     </ImageView>
     <EditText
-        android:id="@+id/idEditText"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/idEditText"
         android:background="@drawable/rounded_edittext"
         android:padding="10dp"
         android:hint="ID"
         android:layout_marginBottom="5dp"
-        android:layout_height="wrap_content"
         android:maxLines="1"
         android:inputType="text">
+
     </EditText>
     <EditText
         android:layout_width="match_parent"
-        android:hint="Password"
-        android:inputType="textPassword"
         android:layout_height="wrap_content"
+        android:inputType="textPassword"
         android:background="@drawable/rounded_edittext"
         android:padding="10dp"
-        android:id="@+id/passwordEditText">
+        android:id="@+id/passwordEditText"
+        android:hint="Password">
+
     </EditText>
     <Button
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:text="Login"
-        android:id="@+id/loginButton"
-        android:layout_height="wrap_content">
+        android:id="@+id/loginButton">
+
     </Button>
 </LinearLayout>
